--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <script src="js/knockout-3.4.2.js"></script>
         <script src="js/jquery-3.2.1.min.js"></script>
-        <script src="app.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
 
