--- a/index.html
+++ b/index.html
@@ -11,25 +11,23 @@
         <header>
             <h1 id="title">Fortinet Application Control List</h1>
         </header>
-<!--         <div id="wrapper">
-            <div id="sidebar-wrapper" >
-                <ul class="sidebar-nav">
-                    <div data-bind='template: { foreach: datalist}' class="sidebar-nav">
-                        <li>
-                            <button class="locations" data-bind=' text: [
+
+<input type="search" id="search-bar" placeholder="Enter a name" data-bind="value:query,valueUpdate: 'keyup'">
+<ul id = "list" data-bind='foreach: filteredNames'>
+
+                            <li>
+                            <button data-bind=' text: $data'>
                             </button>
                         </li>
-                    </div>
-                </ul>
-            </div>
-
-            <input type="search" id="search-bar" placeholder="Enter a name" data-bind="value:query,valueUpdate: 'keyup'">
-        </div> -->
-        <div id = "list"></div>
-            <main></main>
+                    </ul>
+                    <div id="content"></div>
+                </body>
 
 
 
+
+
+        <script src="js/knockout-3.4.2.js"></script>
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/app.js"></script>
     </body>
