--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta charset="utf-8">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-
     </head>
+
     <body>
         <div class="container">
             <div class="row" >
@@ -15,34 +15,27 @@
                     <header>
                         <h1 id="title">Fortinet Application Control List</h1>
                     </header>
+                    <hr>
                 </div>
             </div>
             <div class="row" >
-                <div class="col-md-12" id="search-bar" >
-                <input type="search" placeholder="Enter a name" data-bind="value:query,valueUpdate: 'keyup'">
+                <div class="col-md-12">
+                    <input id="input-box" type="search" placeholder="Enter a name" data-bind="value:query,valueUpdate: 'keyup'">
                 </div>
             </div>
             <div class="row" >
-                <div class="col-md-5" id="list_container" >
-                <ul id = "list" data-bind='foreach: filteredNames'>
-
-                                            <li>
-                                            <button data-bind=' text: $data'>
-                                            </button>
-                                        </li>
-                                    </ul>
+                <div class="col-md-4" id="list-container" >
+                    <ul id = "list" data-bind='foreach: filteredNames'>
+                        <li id="lists">
+                            <button id ="list-item" data-bind=' text: $data'></button>
+                            </li>
+                    </ul>
                 </div>
-                <div class="col-md-7" >
-                             <div id="content"></div>
+                <div class="col-md-8" >
+                    <div id="content"></div>
                 </div>
             </div>
         </div>
-    </body>
-
-
-
-
-
         <script src="js/knockout-3.4.2.js"></script>
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/app.js"></script>
